fix alignments, watermark and minor bugs

--- a/style.css
+++ b/style.css
@@ -68,6 +68,9 @@ body {
 .glow_light,
 .glow_dark {
     text-decoration: none;
+}
+
+.padded{
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -115,8 +118,15 @@ body {
     flex-direction: column;
     box-shadow: -5px 0px 100px #030712;
     flex-wrap: nowrap;
-    overflow-y: scroll;
     overflow-x: hidden;
+}
+
+.menu_noscroll{
+    overflow-y: hidden;
+}
+
+.menu_scroll{
+    overflow-y: scroll;
 }
 
 @keyframes slidein {
@@ -154,7 +164,7 @@ body {
 
 #menu_nav {
     display: flex;
-    justify-content: end;
+    justify-content: space-between;
     align-items: center;
     padding: 1rem;
 }
@@ -167,6 +177,17 @@ body {
     gap: 1rem;
     font-weight: 500;
     font-size: 1.05rem;
+}
+
+.watermark{
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+@media only screen and (min-width: 769px){
+    #nav_watermark{
+        font-size: 1.8rem;
+    }
 }
 
 #menu_sub_container {
@@ -231,14 +252,14 @@ body {
     top: 0;
     z-index: 50;
     width: 100%;
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 1.5rem;
     font-weight: 500;
-    font-size: 1.05rem;
+    font-size: 1rem;
 }
 
 .navbar_dark_border {
@@ -257,28 +278,6 @@ body {
     border-bottom: 0.0625rem solid #f3f4f6;
 }
 
-#watermark_container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.watermark {
-    overflow: hidden;
-    border-right: 1px solid;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 600;
-    font-size: 1.5rem;
-}
-
-#watermark_part1{
-    width: 6ch;
-    animation: typing_withoutFade .5s steps(6) forwards, blink .5s step-end 5 alternate;
-}
-#watermark_part2{
-    width: 4ch;
-    animation: typing 1s steps(4) forwards, blink .25s step-end 10 alternate;
-}
 
 @keyframes typing_withoutFade {
     from{
@@ -1017,6 +1016,18 @@ body {
     #about_backdrop {
         width: 200px;
         height: 200px;
+    }
+}
+
+@media only screen and (max-width: 349px) and (min-width: 320px){
+    #about_image_content {
+        width: 280px;
+    }
+    #about_backdrop {
+        width: 280px;
+    }
+    #about_image {
+        width: 240px;
     }
 }
 
